# zapish-logger

./: .coveragerc  .readthedocs.yaml  Makefile  README.md  make.bat  pylintrc  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: publish-to-pypi.yml  test-coverage-lint.yml
docs/: conf.py  index.rst
docs/source/examples/: change-logging-level.rst  console-logger.rst  custom-logger.rst  file-and-console-logger.rst  file-logger.rst  index.rst  reading-parsing.rst
docs/source/modules/: json_logger.rst  modules.rst  zapish_logger.rst
json_logger/: __init__.py  logger.py  version.py
tests/: conftest.py  test_logger.py
tests/data/: README.md  unit-test.logs
zapish_logger/: logger.py  version.py
