[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zapish-logger"
version = "1.0.2"
requires-python = ">=3.8"
description = "A simple logger that logs in a JSON format inspired by go zap"
readme = {file = "README.md", content-type = "text/markdown"}
keywords = ["logger", "structured", "json"]
authors = [
  { name="Benjamin P. Trachtenberg", email="e_ben_75-python@yahoo.com" },
]
maintainers = [
  {name = "Benjamin P. Trachtenberg", email = "e_ben_75-python@yahoo.com"},
]
license = {file = "LICENSE"}
packages = [
    'zapish_logger',
]
dependencies = [
]
zip-safe = "False"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: POSIX',
    'Operating System :: POSIX :: BSD',
    'Operating System :: POSIX :: Linux',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[project.urls]
Documentation = "https://zapish-logger.readthedocs.io/en/latest/"
Source = "https://github.com/btr1975/zapish-logger"
Tracker = "https://github.com/btr1975/zapish-logger/issues"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    { place_holder = "marks tests as place_holder (deselect with -m 'not place_holder')" },
]

[tool.coverage.run]
command_line= "-m pytest -vvv"

[tool.coverage.report]
include = [
    "zapish_logger/*"
]
